alignment corrected for No project found dashboard agency

--- a/src/Routes/Dashboard/AgencyNewestDashboard.css
+++ b/src/Routes/Dashboard/AgencyNewestDashboard.css
@@ -62,6 +62,7 @@
     font-family: 'Segoe UI Semibold';
     font-size: 1.2rem;
     margin-top: 1rem;
+    text-align: center;
 }
 
 .not_found.agencyNewestDashboard img {
